# libAIML

./: .gitignore  config.h.in  configure.in  libaiml.pc.in  rebuild.sh
lib/usr/lib/python2.7/dist-packages/: libxml2mod.la
lib/usr/local/lib/: libxml2.la  xml2Conf.sh
src/: aiml_parser.cpp
test_app/: Makefile.am  userlist.xml
test_app/aiml/: Makefile.in
util/: Makefile.am  parser.cpp
